# Hermes-TradingBot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: debug_bc.py  debug_bc2.py  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 6c1d92aa1849_add_paper_positions_table.py  8b84f11e8da1_phase1_initial_schema.py
backend/hermes/: cli.py  config.py  main.py
backend/hermes/api/: performance.py  portfolios.py  signals.py
backend/hermes/backtest/: engine.py  report.py
backend/hermes/data/: alpaca_provider.py  base.py  coingecko_provider.py  universe.py  yfinance_provider.py
backend/hermes/db/: models.py  persistence.py  session.py
backend/hermes/events/: bus.py  types.py
backend/hermes/execution/: alpaca_broker.py  base.py  ibkr_broker.py  paper_broker.py  paper_tracker.py
backend/hermes/indicators/: core.py
backend/hermes/outcome/: position_monitor.py  tracker.py
backend/hermes/portfolio/: manager.py
backend/hermes/risk/: kill_switch.py
backend/hermes/scanners/: base.py
backend/hermes/scoring/: feature_extractor.py  rule_scorer.py  scoring_config.yaml
backend/hermes/setups/: __init__.py  base.py  breakout_consolidation.py  cup_and_handle.py  ema_trend_follow.py  fundamental_quality.py  mean_reversion.py  momentum_continuation.py  opening_range_breakout.py  (+1 more)
backend/tests/: test_alpaca_provider.py  test_coingecko_provider.py  test_intra_setups.py  test_long_mid_setups.py  test_mid_setups.py  test_phase0.py  test_phase3.py  test_phase5.py  test_scorer.py  test_yfinance_provider.py
(+25 files in other folders)
